--- a/fda/templates/fda/graph.html
+++ b/fda/templates/fda/graph.html
@@ -31,7 +31,9 @@ var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
-    d3.json("{% static "json/miserables.json" %}", function(error, graph) {
+    // d3.json("{% static "json/miserables.json" %}", function(error, graph) {
+      console.log("{% url 'fda:getGraphData' %}")
+      d3.json("{% url 'fda:getGraphData' %}", function(error, graph) {
   force
       .nodes(graph.nodes)
       .links(graph.links)
