--- a/fda/templates/fda/index.html
+++ b/fda/templates/fda/index.html
@@ -1,11 +1,11 @@
 <h1> Main Page </h1>
 
-<form action="{% url 'fda:genData' %}" method='post'>
+<form action="{% url 'fda:genData' %}" method='get'>
     {% csrf_token %}
     <input type="submit" value="Generate"/>
 </form>
 
-<form action="{% url 'fda:showGraph' %}" method='post'>
+<form action="{% url 'fda:showGraph' %}" method='get'>
     {% csrf_token %}
     <input type="submit" value="Show Graph"/>
 </form>
