--- a/fda/templates/fda/index.html
+++ b/fda/templates/fda/index.html
@@ -48,7 +48,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="{% url "fda:showGraph" %}">About</a>
                     </li>
                     <li>
                         <a href="#">Services</a>
