--- a/fda/templates/fda/graph2.html
+++ b/fda/templates/fda/graph2.html
@@ -43,21 +43,20 @@
 
     {% include "fda/navi.html" %}
 
-
+    
     <!-- Page Content -->
     <div class="container svglocation">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Alpha Analytics</h1>
+                <h1>Beta Analytics</h1>
                 <!-- <p>Note: You may need to adjust some CSS based on the size of your logo. The default logo size is 150x50 pixels.</p> -->
-                <a class="btn btn-large btn-success" id="refresh" style="margin-left: 50px">Sync Data</a>
             </div>
-            
         </div>
-        
     </div>
+
+    <a class="btn btn-large btn-success" id="refresh" style="margin-left: 50px">Sync Data</a>
     <!-- /.container -->
-    
+
     <!-- jQuery Version 1.11.0 -->
     <script src="{% static "logonav/js/jquery-1.11.0.js" %}"></script>
 
@@ -65,7 +64,7 @@
     <script src="{% static "logonav/js/bootstrap.min.js" %}"></script>
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
-<script>
+<script >
 
 $('#refresh').on('click', function(event) {
  console.log("testing button cli");
