--- a/fda/templates/fda/navi.html
+++ b/fda/templates/fda/navi.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="{% url "fda:index" %}">
                     <img src="http://placehold.it/150x50&text=Logo" alt="">
                 </a>
             </div>
@@ -20,7 +20,7 @@
                         <a href="{% url "fda:showGraph" %}">Alpha Analytics</a>
                     </li>
                     <li>
-                        <a href="#">Beta Analytics</a>
+                        <a href="{% url "fda:showGraph2" %}">Beta Analytics</a>
                     </li>
                     <li>
                         <a href="#">Feedback System</a>
