--- a/fda/templates/fda/graph1.html
+++ b/fda/templates/fda/graph1.html
@@ -44,15 +44,17 @@
     {% include "fda/navi.html" %}
 
 
+    <!-- <a class="btn btn-large btn-success" id="refresh" style="margin-left: 50px">Sync Data</a> -->
     <!-- Page Content -->
     <div class="container svglocation">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-8">
                 <h1>Alpha Analytics</h1>
                 <!-- <p>Note: You may need to adjust some CSS based on the size of your logo. The default logo size is 150x50 pixels.</p> -->
-                <a class="btn btn-large btn-success" id="refresh" style="margin-left: 50px">Sync Data</a>
             </div>
-            
+            <div class="col-md-4">
+                <a class="btn btn-large btn-success" id="refresh" style="margin-top: 25px" >Sync Data</a>
+            </div>
         </div>
         
     </div>
