--- a/fda/templates/fda/graph2.html
+++ b/fda/templates/fda/graph2.html
@@ -47,14 +47,16 @@
     <!-- Page Content -->
     <div class="container svglocation">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-md-8">
                 <h1>Beta Analytics</h1>
                 <!-- <p>Note: You may need to adjust some CSS based on the size of your logo. The default logo size is 150x50 pixels.</p> -->
+            </div>
+            <div class="col-md-4">
+                <a class="btn btn-large btn-success" id="refresh" style="margin-top: 25px" >Sync Data</a>
             </div>
         </div>
     </div>
 
-    <a class="btn btn-large btn-success" id="refresh" style="margin-left: 50px">Sync Data</a>
     <!-- /.container -->
 
     <!-- jQuery Version 1.11.0 -->
