--- a/fda/templates/fda/graph2.html
+++ b/fda/templates/fda/graph2.html
@@ -24,19 +24,14 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-<style>
+    <style type="text/css">
 
-.node {
-  stroke: #fff;
-  stroke-width: 1.5px;
-}
+    circle {
+    stroke: #000;
+    stroke-opacity: .5;
+    }
 
-.link {
-  stroke: #999;
-  stroke-opacity: .6;
-}
-
-</style>
+    </style>
 </head>
 
 <body>
@@ -45,7 +40,7 @@
 
     
     <!-- Page Content -->
-    <div class="container svglocation">
+    <div class="container" >
         <div class="row">
             <div class="col-md-8">
                 <h1>Beta Analytics</h1>
@@ -55,6 +50,9 @@
                 <a class="btn btn-large btn-success" id="refresh" style="margin-top: 25px" >Sync Data</a>
             </div>
         </div>
+    </div>
+    <div id="body">
+
     </div>
 
     <!-- /.container -->
@@ -66,74 +64,79 @@
     <script src="{% static "logonav/js/bootstrap.min.js" %}"></script>
 
 <script src="http://d3js.org/d3.v3.min.js"></script>
-<script >
 
-$('#refresh').on('click', function(event) {
- console.log("testing button cli");
- $("svg").remove();
- renderGraph();
-});
+<script>
 
-$(function(){
-  console.log("load finish");
-  renderGraph();
-});
-
-
-function renderGraph()
-{
- var width = 960,
+var width = 960,
     height = 500;
 
-var color = d3.scale.category20();
+var nodes = d3.range(200).map(function() { return {radius: Math.random() * 12 + 4}; }),
+    root = nodes[0],
+    color = d3.scale.category10();
+
+root.radius = 0;
+root.fixed = true;
 
 var force = d3.layout.force()
-    .charge(-120)
-    .linkDistance(30)
+    .gravity(0.05)
+    .charge(function(d, i) { return i ? 0 : -2000; })
+    .nodes(nodes)
     .size([width, height]);
 
-var svg = d3.select(".svglocation").append("svg")
+force.start();
+
+var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
-    // d3.json("{% static "json/miserables.json" %}", function(error, graph) {
-      console.log("{% url 'fda:getGraphData' %}")
-      d3.json("{% url 'fda:getGraphData' %}", function(error, graph) {
-  force
-      .nodes(graph.nodes)
-      .links(graph.links)
-      .start();
+svg.selectAll("circle")
+    .data(nodes.slice(1))
+  .enter().append("circle")
+    .attr("r", function(d) { return d.radius; })
+    .style("fill", function(d, i) { return color(i % 3); });
 
-  var link = svg.selectAll(".link")
-      .data(graph.links)
-    .enter().append("line")
-      .attr("class", "link")
-      .style("stroke-width", function(d) { return Math.sqrt(d.value); });
+force.on("tick", function(e) {
+  var q = d3.geom.quadtree(nodes),
+      i = 0,
+      n = nodes.length;
 
-  var node = svg.selectAll(".node")
-      .data(graph.nodes)
-    .enter().append("circle")
-      .attr("class", "node")
-      .attr("r", 5)
-      .style("fill", function(d) { return color(d.group); })
-      .call(force.drag);
+  while (++i < n) q.visit(collide(nodes[i]));
 
-  node.append("title")
-      .text(function(d) { return d.name; });
+  svg.selectAll("circle")
+      .attr("cx", function(d) { return d.x; })
+      .attr("cy", function(d) { return d.y; });
+});
 
-  force.on("tick", function() {
-    link.attr("x1", function(d) { return d.source.x; })
-        .attr("y1", function(d) { return d.source.y; })
-        .attr("x2", function(d) { return d.target.x; })
-        .attr("y2", function(d) { return d.target.y; });
+svg.on("mousemove", function() {
+  var p1 = d3.mouse(this);
+  root.px = p1[0];
+  root.py = p1[1];
+  force.resume();
+});
 
-    node.attr("cx", function(d) { return d.x; })
-        .attr("cy", function(d) { return d.y; });
-  });
-});       
+function collide(node) {
+  var r = node.radius + 16,
+      nx1 = node.x - r,
+      nx2 = node.x + r,
+      ny1 = node.y - r,
+      ny2 = node.y + r;
+  return function(quad, x1, y1, x2, y2) {
+    if (quad.point && (quad.point !== node)) {
+      var x = node.x - quad.point.x,
+          y = node.y - quad.point.y,
+          l = Math.sqrt(x * x + y * y),
+          r = node.radius + quad.point.radius;
+      if (l < r) {
+        l = (l - r) / l * .5;
+        node.x -= x *= l;
+        node.y -= y *= l;
+        quad.point.x += x;
+        quad.point.y += y;
+      }
+    }
+    return x1 > nx2 || x2 < nx1 || y1 > ny2 || y2 < ny1;
+  };
 }
-
-
 
 </script>
 </body>
