--- a/fda/templates/fda/graph2.html
+++ b/fda/templates/fda/graph2.html
@@ -70,49 +70,72 @@
 var width = 960,
     height = 500;
 
-var nodes = d3.range(200).map(function() { return {radius: Math.random() * 12 + 4}; }),
-    root = nodes[0],
-    color = d3.scale.category10();
+ // var nodes = d3.range(200).map(function() { return {radius: Math.random() * 12 + 4}; }),
+     // root = nodes[0],
+     color = d3.scale.category10();
 
-root.radius = 0;
-root.fixed = true;
+
 
 var force = d3.layout.force()
     .gravity(0.05)
-    .charge(function(d, i) { return i ? 0 : -2000; })
-    .nodes(nodes)
+    .charge(function(d, i) { return 0; })
+    // .nodes(nodes)
     .size([width, height]);
-
-force.start();
 
 var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
-svg.selectAll("circle")
-    .data(nodes.slice(1))
+d3.json("{% url 'fda:getGraphData2' %}", function(error, graph) {
+ //   root = graph[0]
+ //   root.radius = 0;
+ // root.fixed = true;
+for( n in graph)
+{
+  graph[n].radius =graph[n].radius *2.5;
+}
+
+
+   force
+      .nodes(graph)
+      .start();
+
+
+      svg.selectAll("circle")
+    .data(graph.slice(1))
   .enter().append("circle")
     .attr("r", function(d) { return d.radius; })
-    .style("fill", function(d, i) { return color(i % 3); });
+    .style("fill", function(d, i) { return color(i % 3); })
+    .call(force.drag);
 
 force.on("tick", function(e) {
-  var q = d3.geom.quadtree(nodes),
+  var q = d3.geom.quadtree(graph),
       i = 0,
-      n = nodes.length;
+      n = graph.length;
 
-  while (++i < n) q.visit(collide(nodes[i]));
+  while (++i < n) q.visit(collide(graph[i]));
 
   svg.selectAll("circle")
       .attr("cx", function(d) { return d.x; })
       .attr("cy", function(d) { return d.y; });
 });
 
-svg.on("mousemove", function() {
-  var p1 = d3.mouse(this);
-  root.px = p1[0];
-  root.py = p1[1];
-  force.resume();
+// svg.on("mousemove", function() {
+//   var p1 = d3.mouse(this);
+//   root.px = p1[0];
+//   root.py = p1[1];
+//   force.resume();
+// });
+
 });
+
+
+
+
+
+
+
+
 
 function collide(node) {
   var r = node.radius + 16,
