--- a/fda/templates/fda/graph2.html
+++ b/fda/templates/fda/graph2.html
@@ -29,6 +29,11 @@
     circle {
     stroke: #000;
     stroke-opacity: .5;
+    
+    }
+
+    #hightlightcircle {
+    stroke-width: 5;  
     }
 
     </style>
@@ -63,11 +68,11 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="{% static "logonav/js/bootstrap.min.js" %}"></script>
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
 
-<script>
+    <script>
 
-var width = 960,
+    var width = 960,
     height = 500;
 
  // var nodes = d3.range(200).map(function() { return {radius: Math.random() * 12 + 4}; }),
@@ -76,48 +81,66 @@ var width = 960,
 
 
 
-var force = d3.layout.force()
-    .gravity(0.05)
-    .charge(function(d, i) { return 0; })
+     var force = d3.layout.force()
+     .gravity(0.05)
+     .charge(function(d, i) { return 0; })
     // .nodes(nodes)
     .size([width, height]);
 
-var svg = d3.select("body").append("svg")
+    var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
-d3.json("{% url 'fda:getGraphData2' %}", function(error, graph) {
+    d3.json("{% url 'fda:getGraphData2' %}", function(error, graph) {
  //   root = graph[0]
  //   root.radius = 0;
  // root.fixed = true;
-for( n in graph)
-{
+ for( n in graph)
+  {
   graph[n].radius =graph[n].radius *2.5;
-}
+  }
 
 
-   force
-      .nodes(graph)
-      .start();
+force
+.nodes(graph)
+.start();
 
 
-      svg.selectAll("circle")
-    .data(graph.slice(1))
-  .enter().append("circle")
-    .attr("r", function(d) { return d.radius; })
-    .style("fill", function(d, i) { return color(i % 3); })
-    .call(force.drag);
+var nodes = svg.selectAll("circle")
+.data(graph.slice(1))
+.enter().append("circle")
+.attr("r", function(d) { return d.radius; })
+.style("fill", function(d, i) { return color(i % 3); })
+.call(force.drag)
+.on("mouseover",function(d){
+  var n = svg.selectAll("circle")
+      .filter(function(dd, i){ return dd.name === d.name; });
+
+  // n.attr("id", function(dd){ return "hightlightcircle"});
+  n.attr("id", "hightlightcircle");
+})
+.on("mouseout",function(d){
+  var n = svg.selectAll("circle")
+      .filter(function(dd, i){ return dd.name === d.name; });
+
+  // n.attr("id", function(dd){ return "hightlightcircle"});
+  n.attr("id", "");
+});
+
+nodes.append("title")
+     .text(function(d){ return d.name});
+
 
 force.on("tick", function(e) {
   var q = d3.geom.quadtree(graph),
-      i = 0,
-      n = graph.length;
+  i = 0,
+  n = graph.length;
 
   while (++i < n) q.visit(collide(graph[i]));
 
   svg.selectAll("circle")
-      .attr("cx", function(d) { return d.x; })
-      .attr("cy", function(d) { return d.y; });
+  .attr("cx", function(d) { return d.x; })
+  .attr("cy", function(d) { return d.y; });
 });
 
 // svg.on("mousemove", function() {
@@ -127,7 +150,7 @@ force.on("tick", function(e) {
 //   force.resume();
 // });
 
-});
+  });
 
 
 
@@ -137,31 +160,31 @@ force.on("tick", function(e) {
 
 
 
-function collide(node) {
-  var r = node.radius + 16,
+    function collide(node) {
+      var r = node.radius + 16,
       nx1 = node.x - r,
       nx2 = node.x + r,
       ny1 = node.y - r,
       ny2 = node.y + r;
-  return function(quad, x1, y1, x2, y2) {
-    if (quad.point && (quad.point !== node)) {
-      var x = node.x - quad.point.x,
+      return function(quad, x1, y1, x2, y2) {
+        if (quad.point && (quad.point !== node)) {
+          var x = node.x - quad.point.x,
           y = node.y - quad.point.y,
           l = Math.sqrt(x * x + y * y),
           r = node.radius + quad.point.radius;
-      if (l < r) {
-        l = (l - r) / l * .5;
-        node.x -= x *= l;
-        node.y -= y *= l;
-        quad.point.x += x;
-        quad.point.y += y;
-      }
+          if (l < r) {
+            l = (l - r) / l * .5;
+            node.x -= x *= l;
+            node.y -= y *= l;
+            quad.point.x += x;
+            quad.point.y += y;
+          }
+        }
+        return x1 > nx2 || x2 < nx1 || y1 > ny2 || y2 < ny1;
+      };
     }
-    return x1 > nx2 || x2 < nx1 || y1 > ny2 || y2 < ny1;
-  };
-}
 
-</script>
+    </script>
 </body>
 
 </html>
