change analysis in navi bar to dropdown

--- a/fda/templates/fda/graph1.html
+++ b/fda/templates/fda/graph1.html
@@ -49,7 +49,7 @@
     <div class="container svglocation">
         <div class="row">
             <div class="col-lg-8">
-                <h1>Alpha Analytics</h1>
+                <h1>Alpha Analysis</h1>
                 <!-- <p>Note: You may need to adjust some CSS based on the size of your logo. The default logo size is 150x50 pixels.</p> -->
             </div>
             <div class="col-md-4">
