--- a/fda/templates/fda/graph2.html
+++ b/fda/templates/fda/graph2.html
@@ -48,7 +48,7 @@
     <div class="container" >
         <div class="row">
             <div class="col-md-8">
-                <h1>Beta Analytics</h1>
+                <h1>Beta Analysis</h1>
                 <!-- <p>Note: You may need to adjust some CSS based on the size of your logo. The default logo size is 150x50 pixels.</p> -->
             </div>
             <div class="col-md-4">
