--- a/fda/templates/fda/navi.html
+++ b/fda/templates/fda/navi.html
@@ -1,33 +1,41 @@
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{% url "fda:index" %}">
-                    <img src="http://placehold.it/150x50&text=Logo" alt="">
-                </a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+<!-- Navigation -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{% url "fda:index" %}">
+                <img src="http://placehold.it/150x50&text=Logo" alt="">
+            </a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="dropdown" style="margin-left: 25px">
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    Analysis <span class="caret"></span>
+                  </a>
+                  <ul class="dropdown-menu" role="menu">
                     <li>
-                        <a href="{% url "fda:showGraph" %}">Alpha Analytics</a>
+                        <a href="{% url "fda:showGraph" %}">Alpha Analysis</a>
                     </li>
                     <li>
-                        <a href="{% url "fda:showGraph2" %}">Beta Analytics</a>
-                    </li>
-                    <li>
-                        <a href="#">Feedback System</a>
+                        <a href="{% url "fda:showGraph2" %}">Beta Analysis</a>
                     </li>
                 </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+            </li>
+            <li>
+                <a href="#">Feedback System</a>
+            </li>
+
+        </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+</div>
+<!-- /.container -->
+</nav>
