--- a/fda/templates/fda/navi.html
+++ b/fda/templates/fda/navi.html
@@ -30,7 +30,7 @@
                 </ul>
             </li>
             <li>
-                <a href="#">Feedback System</a>
+                <a href="{% url "fda:feedback" %}">Feedback System</a>
             </li>
 
         </ul>
