fine turning ui

--- a/fda/templates/fda/feedback.html
+++ b/fda/templates/fda/feedback.html
@@ -28,7 +28,11 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
         <style>
-
+          table th {
+            background-color: #333;
+            color: white; 
+            font-weight: bold; 
+          }
         </style>
     </head>
     <body>
