--- a/fda/templates/fda/graph2.html
+++ b/fda/templates/fda/graph2.html
@@ -36,6 +36,11 @@
     stroke-width: 5;  
     }
 
+    table th {
+            background-color: #333;
+            color: white; 
+            font-weight: bold; 
+    }
     </style>
 </head>
 
@@ -48,8 +53,8 @@
     <div class="container" >
         <div class="row">
             <div class="col-md-8">
-                <h1>Beta Analysis</h1>
-                <!-- <p>Note: You may need to adjust some CSS based on the size of your logo. The default logo size is 150x50 pixels.</p> -->
+                <h1>Hot Graph</h1>
+                <p>Show the amount of food material and additives used base on user query.</p>
             </div>
             <div class="col-md-4">
                 <a class="btn btn-large btn-success" id="refresh" style="margin-top: 25px" >Sync Data</a>
