--- a/fda/templates/fda/navi.html
+++ b/fda/templates/fda/navi.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!-- Navigation -->
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
@@ -10,7 +11,8 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{% url "fda:index" %}">
-                <img src="http://placehold.it/150x50&text=Logo" alt="">
+                <!-- <img src="http://placehold.it/150x50&text=Logo" alt=""> -->
+                <img src="{%static "image/fda/logo.png"%}" alt="">
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,7 +27,10 @@
                         <a href="{% url "fda:showGraph" %}">Alpha Analysis</a>
                     </li>
                     <li>
-                        <a href="{% url "fda:showGraph2" %}">Beta Analysis</a>
+                        <a href="{% url "fda:showGraph2" %}">Hot Graph</a>
+                    </li>
+                    <li class="disabled">
+                        <a href="#" >More Options Will Comming Soon</a>
                     </li>
                 </ul>
             </li>
