--- a/fda/templates/fda/index.html
+++ b/fda/templates/fda/index.html
@@ -35,8 +35,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h1>Logo Nav by Start Bootstrap</h1>
-                <p>Note: You may need to adjust some CSS based on the size of your logo. The default logo size is 150x50 pixels.</p>
+                <h1>X-Food 透視食品健康雲端服務</h1>
+                <p>by 哈哈隊 @ ITRI</p>
             </div>
         </div>
     </div>
