--- a/fda/templates/fda/graph2.html
+++ b/fda/templates/fda/graph2.html
@@ -53,7 +53,7 @@
     <div class="container" >
         <div class="row">
             <div class="col-md-8">
-                <h1>Hot Graph</h1>
+                <h1>Material and Additives Hot Spot</h1>
                 <p>Show the amount of food material and additives used base on user query.</p>
             </div>
             <div class="col-md-4">
