--- a/fda/templates/fda/navi.html
+++ b/fda/templates/fda/navi.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <!-- Navigation -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#333" role="navigation">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -27,7 +27,7 @@
                         <a href="{% url "fda:showGraph" %}">Alpha Analysis</a>
                     </li>
                     <li>
-                        <a href="{% url "fda:showGraph2" %}">Hot Graph</a>
+                        <a href="{% url "fda:showGraph2" %}">Material and Additives Hot Spot </a>
                     </li>
                     <li class="disabled">
                         <a href="#" >More Options Will Comming Soon</a>
