--- a/fda/templates/fda/index.html
+++ b/fda/templates/fda/index.html
@@ -36,7 +36,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1>X-Food 透視食品健康雲端服務</h1>
-                <p>by 哈哈隊 @ ITRI</p>
+                <p>by 哈哈隊 </p>
             </div>
         </div>
     </div>
