--- a/fda/templates/fda/graph2.html
+++ b/fda/templates/fda/graph2.html
@@ -57,13 +57,13 @@
                 <p>Show the amount of food material and additives used base on user query.</p>
             </div>
             <div class="col-md-4">
-                <a class="btn btn-large btn-success" id="refresh" style="margin-top: 25px" >Sync Data</a>
+                <a class="btn btn-large btn-success" id="refresh" style="margin-top: 25px" href="{% url "fda:showGraph2"%}" >Sync Data</a>
             </div>
         </div>
     </div>
     <div class="row">
-      <div class="col-md-6" id="body"></div>  
-      <div class="col-md-5" style="margin-top: 30px">
+      <div class="col-md-6" id="body" ></div>  
+      <div class="col-md-5" style="margin-top: 30px; ">
             <table class="table table-hover">
            <tr>
             <th>食品添加物或原料名稱</th>
@@ -152,7 +152,18 @@ var nodes = svg.selectAll("circle")
 .data(graph.slice(0))
 .enter().append("circle")
 .attr("r", function(d) { return d.radius; })
-.style("fill", function(d, i) { return color(i % 3); })
+.style("fill", function(d, i) { 
+  var c = 0;
+  if(d.type == 'M')
+    c = 0;
+  else if(d.type == 'A')
+    c =1;
+  else if(d.type == 'N')
+    c =2;
+  else 
+    c =3;
+  return color(c); 
+})
 .call(force.drag)
 .on("mouseover",function(d){
   var n = svg.selectAll("circle")
